# columnar

./: .gitignore  LICENSE  LICENSE.md  README.md  build.gradle  build.gradle.kts  ctok.bash  local.properties  ontology.txt  pom.xml  release.properties  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
bbcursive/: pom.xml
brittle/: pom.xml
c_async/: .gitignore  CMakeCache.txt  CMakeLists.txt  ac.h  c_async.def  c_async.klib  lib_uring_ex.c  lib_uring_poll_kernel_thread_ex.c  library.c  minimalepoll.c  nativelib.klib  uring_echo.c  uring_ex.c  webserver_liburing.c
c_async/c_async-build/: manifest.properties
c_async/c_async-build/natives/: cstubs.bc
c_async/nativelib-build/: manifest.properties
c_async/nativelib-build/natives/: cstubs.bc
columnar/: .gitignore  java_pid97171.hprof.REMOVED.git-id  settings.gradle.kts
columnar/c_async/: build.gradle.kts  interop.def
columnar/cat_uring/: build.gradle.kts
columnar/cinterop/: ac.h  c_async.def
columnar/cursor/: build.gradle.kts
columnar/echo_uring/: build.gradle.kts
columnar/httpd_uring/: build.gradle.kts
columnar/trie/: build.gradle.kts
columnar/vect0r/: build.gradle.kts
cursor/: build.gradle.kts  pom.xml
dayjob/: pom.xml
exchange/: pom.xml
lillypads/: README.md  pom.xml
locator/: pom.xml
old/: build.gradle
original_recipe/: README.md  pom.xml  settings.gradle.kts
reports/: detekt.txt  detekt.xml
seventyfive/: pom.xml
tbd/: .gitignore  README.md  pom.xml
trie/: .gitignore  README.md  build.gradle.kts  pom.xml
vector-like/: README.md  pom.xml
(+826 files in other folders)
